--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -5,6 +5,8 @@
 @import 'tools/mq';
 @import 'tools/linkstates';
 @import 'tools/material-icons';
+@import 'tools/materialshadow';
+@import 'tools/placeholder';
 
 // generic
 @import '../../../node_modules/normalize-scss/sass/normalize/import-now';
@@ -14,5 +16,14 @@
 // placeholers
 
 // components
+@import 'components/body';
+@import 'components/card';
+@import 'components/container';
+@import 'components/card-list';
+@import 'components/input';
+@import 'components/tag-list';
+@import 'components/tag';
+@import 'components/search-box';
 
 //transitions
+@import 'transitions/list-transition';
