--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -23,6 +23,7 @@
 @import 'components/input';
 @import 'components/tag-list';
 @import 'components/tag';
+@import 'components/grid';
 @import 'components/search-box';
 
 //transitions
