--- a/frontend/src/scss/components/_input.scss
+++ b/frontend/src/scss/components/_input.scss
@@ -2,8 +2,14 @@
   width: 100%;
   padding: 15px 30px;
   outline: none;
+  border: 1px solid #ddd;
+  font-family: inherit;
 
   @include placeholder {
     color: #aaa;
   }
+}
+
+.input--with-icon {
+  padding-left: 45px;
 }
