--- a/frontend/src/scss/components/_search-box.scss
+++ b/frontend/src/scss/components/_search-box.scss
@@ -1,3 +1,12 @@
 .search-box {
+  position: relative;
   padding: 50px 0;
+}
+
+.search-box__icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 15px;
+  color: #666;
 }
