--- a/frontend/src/scss/components/_tag.scss
+++ b/frontend/src/scss/components/_tag.scss
@@ -3,5 +3,7 @@
   background: #0288D1;
   border-radius: 50px;
   line-height: 1;
-  padding: 3px 10px;
+  padding: 4px 10px;
+  text-transform: uppercase;
+  font-size: 14px;
 }
