--- a/frontend/src/scss/components/_tag.scss
+++ b/frontend/src/scss/components/_tag.scss
@@ -1,6 +1,6 @@
 .tag {
   color: #fff;
-  background: #0288D1;
+  background: #00B8D4;
   border-radius: 50px;
   line-height: 1;
   padding: 4px 10px;
