--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -27,6 +27,7 @@
 @import 'components/grid';
 @import 'components/section';
 @import 'components/search-box';
+@import 'components/action-list';
 
 //transitions
 @import 'transitions/list-transition';
