--- a/frontend/src/scss/components/_grid.scss
+++ b/frontend/src/scss/components/_grid.scss
@@ -1,9 +1,11 @@
 .grid {
   display: flex;
+  flex-wrap: wrap;
   margin: -30px 0 0 -30px;
 }
 
 .grid__item {
   padding: 30px 0 0 30px;
-  flex: 0 1 100%;
+  flex: 0 0 50%;
+  max-width: 50%;
 }
