--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -28,6 +28,8 @@
 @import 'components/section';
 @import 'components/search-box';
 @import 'components/action-list';
+@import 'components/department';
+@import 'components/department-list';
 
 //transitions
 @import 'transitions/list-transition';
