--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -18,6 +18,7 @@
 
 // components
 @import 'components/body';
+@import 'components/header';
 @import 'components/card';
 @import 'components/container';
 @import 'components/card-list';
