--- a/frontend/src/scss/components/_card.scss
+++ b/frontend/src/scss/components/_card.scss
@@ -10,12 +10,11 @@
 .card__header {
   padding: 10px 15px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   transition: all .25s ease-in-out;
 }
 
 .card__departments {
-  padding: 15px;
 }
 
 .card__body {
@@ -37,7 +36,7 @@
 .card__commentarea {
   border: none;
   width: 100%;
-  height: 75px;
+  height: 50px;
   resize: vertical;
   outline: none;
 }
