--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'components/header';
 @import 'components/card';
 @import 'components/container';
+@import 'components/no-results';
 @import 'components/card-list';
 @import 'components/input';
 @import 'components/tag-list';
